Cambios md - Animaciones

--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -77,6 +77,8 @@
   @media (max-width: $bp-max-md)
     background-size: cover
     height: 300px
+  @media (min-width: $bp-min-lg) and (max-width: $bp-max-xl)
+    width: 290px
 
 .flex-center-text
   align-items: center
@@ -145,6 +147,9 @@
     background-image: url("../assets/curso/tema1/img20-1.svg")!important
     background-size: cover
     width: 370px!important
+  @media (min-width: $bp-min-lg) and (max-width: $bp-max-xl)
+      width: 524px
+      background-size: cover
   
 .bg_07
   position: relative
@@ -301,6 +306,8 @@
     height: 100%
     background-image: url("../assets/curso/tema1/img40.svg")
     background-repeat: no-repeat
+    @media (max-width: $bp-max-xs)
+      background-image: url("../assets/curso/tema3/img49.svg")
 
 .bg_16
   position: relative
@@ -323,6 +330,8 @@
     width: 295px
     height: 371px
     border-radius: 10px
+    @media (min-width: $bp-min-lg) and (max-width: $bp-max-xl)
+      width: 257px
 
 .m_tar-avatar2
   .tarjeta.color-primario
@@ -331,9 +340,20 @@
     width: 295px
     height: 240px
     border-radius: 10px
+    @media (min-width: $bp-min-lg) and (max-width: $bp-max-xl)
+      width: 252px
+    @media (max-width: $bp-max-md)
+      margin-left: 0px
+    @media (max-width: $bp-max-xs)
+      margin-left: 45px
 
 .img85
   max-width: 85px
+
+.img91
+  max-width: 91px
+  width: 91px
+  margin-left: -22%
 
 .tarjeta-avatar > img 
     top: 39px
@@ -351,11 +371,22 @@
     width: 295px
     height: 225.87px
     border-radius: 10px 
+    @media (max-width: $bp-max-md)
+      margin-left: 21%
+    @media (max-width: $bp-max-xs)
+      margin-left: 3%
 
 .m_tarjeta-b
   .tarjeta--boton.color-acento-contenido
     width: 295px
     height: 234px
+    @media (min-width: $bp-min-lg) and (max-width: $bp-max-xl)
+      width: 252px
+    @media (max-width: $bp-max-xs)
+      margin-left: 11%
+.hover2
+    .tarjeta--boton:hover
+      background-color: #2FF980  
 
 .bg_17
   background-image: url("../assets/curso/tema1/img48.svg")
@@ -387,6 +418,8 @@
     @media (max-width: $bp-max-md)
       background-size: cover
       background-color: #D5CEF8
+    @media (min-width: $bp-min-lg) and (max-width: $bp-max-xl)
+      height: 230px
 
 
 .tabs-a__tab
@@ -551,6 +584,8 @@
   left: 73px
   @media (max-width: $bp-max-md)
     left: 0px
+  @media (min-width: $bp-min-lg) and (max-width: $bp-max-xl)
+    left: 0px
 
 .bg_34
   background-image: url("../assets/curso/tema1/img11-1.svg")
@@ -580,6 +615,8 @@
     margin-top: 5%
     height: 100%
     width: 100%
+  @media (min-width: $bp-min-lg) and (max-width: $bp-max-xl)
+    margin-left: -35%
 
 .bg_34-2
   background-image: url("../assets/curso/tema3/img34.svg")
@@ -615,8 +652,8 @@
     height: 100%
     background-image: url("../assets/curso/tema1/img89.svg")
     background-repeat: no-repeat
-    @media (max-width: $bp-max-md)
-      background-image: url("../assets/curso/tema1/img90.svg")
+    @media (max-width: $bp-max-xs)
+      background-image: url("../assets/curso/tema3/img49.svg")
       
 .bg_36
   background-image: url("../assets/curso/tema1/img87.svg")
@@ -683,6 +720,45 @@
   background-repeat: no-repeat
   width: 229px
   height: 271.11px
+  @media (min-width: $bp-min-lg) and (max-width: $bp-max-xl)
+    width: 200px!important
+.hover1
+  .tarjeta--boton:hover
+    background-image: url("../assets/curso/tema3/img09.svg")
+
+.tarjeta--boton.color-primario
+  background-color: #583AE2
+  height: 98px
+  margin-left: -36px
+  right: -36px
+  position: relative
+  @media (min-width: $bp-min-lg) and (max-width: $bp-max-xl)
+    width: 101px
+    right: -41px
+  
+.hover3
+  .tarjeta--boton:hover
+    background-color: #2FF980
+
+.tarjeta--boton.color-secundario
+  background-color: #D5CEF8
+  height: 98px
+  width: 181px
+  margin-left: 7px
+  @media (min-width: $bp-min-lg) and (max-width: $bp-max-xl)
+    width: 142px
+    margin-left: 13px
+.hover4
+  .tarjeta--boton:hover
+    background-color: #DAF1F5
+    p 
+      color: #12263F
+
+.color2
+  background-color: #583AE2
+
+.color3
+  background-color: #D5CEF8
 
 .m_left
   margin-left: 0%
@@ -736,12 +812,20 @@
     height: 100%
     background-image: url("../assets/curso/tema3/img18.svg")
     background-repeat: no-repeat
+    @media (max-width: $bp-max-xs)
+      background-image: url("../assets/curso/tema3/img48.svg")
 
 .m_tarslyder2
   .tarjeta--azul 
     background-color: #F3F1FF
     border-radius: 10px
     height: 110px
+
+.m_tarslyder3
+  .tarjeta--azul 
+    background-color: #B5E4EB
+    border-radius: 10px
+    height: 119px
 
 .bg_43
   position: relative
@@ -772,6 +856,8 @@
     height: 100%
     background-image: url("../assets/curso/tema3/img29.svg")
     background-repeat: no-repeat
+    @media (max-width: $bp-max-xs)
+      background-image: url("../assets/curso/tema3/img49.svg")
 
 .bg_45
   position: relative
@@ -802,6 +888,8 @@
     height: 100%
     background-image: url("../assets/curso/tema3/img36.svg")
     background-repeat: no-repeat
+    @media (max-width: $bp-max-xs)
+      background-image: url("../assets/curso/tema3/img49.svg")
 
 .bg_47
   background-image: url("../assets/curso/tema3/img37.svg")
@@ -823,6 +911,8 @@
     height: 100%
     background-image: url("../assets/curso/tema3/img39.svg")
     background-repeat: no-repeat
+    @media (max-width: $bp-max-xs)
+      background-image: url("../assets/curso/tema3/img48.svg")    
 
 .bg_49
   position: relative
@@ -838,6 +928,8 @@
     height: 100%
     background-image: url("../assets/curso/tema3/img42.png")
     background-repeat: no-repeat
+    @media (max-width: $bp-max-xs)
+      background-image: url("../assets/curso/tema3/img49.svg")
 
 .bg_50
   position: relative
@@ -853,3 +945,5 @@
     height: 100%
     background-image: url("../assets/curso/tema3/img44.svg")
     background-repeat: no-repeat
+    @media (max-width: $bp-max-xs)
+      background-image: url("../assets/curso/tema3/img49.svg")
