--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -61,6 +61,10 @@
       background-size: cover
       top: -2%
       height: 105%
+    @media (min-width: 990px) and (max-width: 1024px)
+      height: 81%
+    @media (min-width: 1200px) and (max-width: 1400px)
+      height: 80%
 
 .color1
   background-color: #E4E4E4
@@ -72,13 +76,19 @@
   background-image: url("../assets/curso/tema1/img04.svg")
   background-repeat: no-repeat 
   height: 196px
-  width: 315px
   border-radius: 0px
+  @media (max-width: $bp-max-xs)
+    height: 281px
   @media (max-width: $bp-max-md)
     background-size: cover
     height: 300px
-  @media (min-width: $bp-min-lg) and (max-width: $bp-max-xl)
-    width: 290px
+  @media (min-width: 990px) and (max-width: 1024px)
+    background-size: cover
+  @media (min-width: 1200px) and (max-width: 1400px)
+    background-size: cover
+    height: 215px
+
+
 
 .flex-center-text
   align-items: center
@@ -95,6 +105,11 @@
     border-radius: 50%
     padding: 14px 17px
     color: white
+    @media (max-width: $bp-max-md)
+      width: 35px
+      height: 35px
+      padding: 9px 13px
+      font-size: 1rem
   
 .bg_03
   background-image: url("../assets/curso/tema1/img11.svg")
@@ -150,6 +165,8 @@
   @media (min-width: $bp-min-lg) and (max-width: $bp-max-xl)
       width: 524px
       background-size: cover
+  @media (min-width: 990px) and (max-width: 1024px)
+    width: 103%
   
 .bg_07
   position: relative
@@ -327,11 +344,15 @@
 .tarjeta.color-primario 
     background-image: url("../assets/curso/tema1/img47.svg")
     background-repeat: no-repeat
-    width: 295px
+    width: 293px
     height: 371px
     border-radius: 10px
     @media (min-width: $bp-min-lg) and (max-width: $bp-max-xl)
-      width: 257px
+      width: 97%
+      height: 372px
+    @media (max-width: $bp-max-md)
+      width: 288px
+      height: 360px
 
 .m_tar-avatar2
   .tarjeta.color-primario
@@ -369,12 +390,17 @@
     background-image: url("../assets/curso/tema2/img15.svg")
     background-repeat: no-repeat
     width: 295px
-    height: 225.87px
+    height: 224.87px
     border-radius: 10px 
     @media (max-width: $bp-max-md)
-      margin-left: 21%
+      width: 250px
     @media (max-width: $bp-max-xs)
       margin-left: 3%
+      width: 295px
+    @media (min-width: 990px) and (max-width: 1024px)
+      width: 285px
+    @media (min-width: 1200px) and (max-width: 1400px)
+      width: 228px
 
 .m_tarjeta-b
   .tarjeta--boton.color-acento-contenido
@@ -384,6 +410,8 @@
       width: 252px
     @media (max-width: $bp-max-xs)
       margin-left: 11%
+    @media (min-width: 990px) and (max-width: 1024px)
+      width: 215px 
 .hover2
     .tarjeta--boton:hover
       background-color: #2FF980  
@@ -419,8 +447,13 @@
       background-size: cover
       background-color: #D5CEF8
     @media (min-width: $bp-min-lg) and (max-width: $bp-max-xl)
-      height: 230px
+      height: 257px
+      background-size: cover
 
+.m_right
+  margin-right: 0px
+  @media (min-width: $bp-min-lg) and (max-width: $bp-max-xl)
+    margin-right: -15px
 
 .tabs-a__tab
     background-color: #E8E8E8
@@ -543,6 +576,8 @@
   background-repeat: no-repeat
   @media (max-width: $bp-max-md)
     background-size: cover
+  @media (min-width: $bp-min-lg) and (max-width: $bp-max-xl)
+    background-size: cover
 
 .bg_32
   position: relative
@@ -600,6 +635,10 @@
     margin-top: 5%
     height: 100%
     width: 100%
+  @media (min-width: 990px) and (max-width: 1024px)
+    margin-left: -39%
+  @media (min-width: 1200px) and (max-width: 1400px)
+    margin-left: -21.5%
 
 .bg_34-1
   background-image: url("../assets/curso/tema3/img27.svg")
@@ -615,7 +654,9 @@
     margin-top: 5%
     height: 100%
     width: 100%
-  @media (min-width: $bp-min-lg) and (max-width: $bp-max-xl)
+  @media (min-width: 990px) and (max-width: 1024px)
+    margin-left: -53%
+  @media (min-width: 1200px) and (max-width: 1400px)
     margin-left: -35%
 
 .bg_34-2
@@ -666,6 +707,8 @@
   background-image: url("../assets/curso/tema2/img02.svg")
   background-repeat: no-repeat
   @media (max-width: $bp-max-md)
+    background-image: none
+    background-color: #D5CEF8
     background-size: cover
   
 .bg_38
@@ -720,11 +763,25 @@
   background-repeat: no-repeat
   width: 229px
   height: 271.11px
-  @media (min-width: $bp-min-lg) and (max-width: $bp-max-xl)
-    width: 200px!important
+  @media (max-width: $bp-max-xs)
+    background-image: none
+    background-color: #DAF1F5
+    width: 300px!important
+    height: 235px
+  @media (max-width: $bp-max-md)
+    width: 215px
+  @media (min-width: 990px) and (max-width: 1024px)
+    width: 168px
+  @media (min-width: 1200px) and (max-width: 1400px)
+    width: 205px
 .hover1
   .tarjeta--boton:hover
     background-image: url("../assets/curso/tema3/img09.svg")
+    @media (max-width: $bp-max-xs)
+      background-image: none
+      background-color: #AB9DF1
+      width: 300px
+      height: 235px
 
 .tarjeta--boton.color-primario
   background-color: #583AE2
@@ -735,10 +792,27 @@
   @media (min-width: $bp-min-lg) and (max-width: $bp-max-xl)
     width: 101px
     right: -41px
-  
-.hover3
-  .tarjeta--boton:hover
-    background-color: #2FF980
+
+.tarjeta1
+  &__img
+    background-color: #583AE2
+    border-radius: 10px
+    transition: background-color 0.3s ease-in-out
+    .img_2
+      display: none
+  &__contenido
+    background-color: #D5CEF8
+    border-radius: 10px
+    transition: background-color 0.3s ease-in-out
+  &:hover
+    .tarjeta1__img
+      background-color: #2FF980
+      .img_1
+        display: none
+      .img_2
+        display: block
+    .tarjeta1__contenido
+      background-color: #DAF1F5
 
 .tarjeta--boton.color-secundario
   background-color: #D5CEF8
@@ -748,11 +822,6 @@
   @media (min-width: $bp-min-lg) and (max-width: $bp-max-xl)
     width: 142px
     margin-left: 13px
-.hover4
-  .tarjeta--boton:hover
-    background-color: #DAF1F5
-    p 
-      color: #12263F
 
 .color2
   background-color: #583AE2
@@ -762,41 +831,49 @@
 
 .m_left
   margin-left: 0%
+  @media (max-width: $bp-max-xs)
+    margin-left: 20%!important
   @media (max-width: $bp-max-md)
-    margin-left: 20%
+    margin-left: -10%
 
 .m_left1
   margin-left: 21%
+  @media (max-width: $bp-max-xs)
+    margin-left: 20%!important
   @media (max-width: $bp-max-md)
-    margin-left: 20%
+    margin-left: -5%
 
 .m_left2
   margin-left: 43%
+  @media (max-width: $bp-max-xs)
+    margin-left: 20%!important
   @media (max-width: $bp-max-md)
-    margin-left: 20%
+    margin-left: -1%
 
 .m_left3
   margin-left: 66%
+  @media (max-width: $bp-max-xs)
+    margin-left: 20%!important
   @media (max-width: $bp-max-md)
-    margin-left: 20%
+    margin-left: -10%
 
 .m_left4
   margin-left: 88%
+  @media (max-width: $bp-max-xs)
+    margin-left: 20%!important
   @media (max-width: $bp-max-md)
-    margin-left: 20%
+    margin-left: -5%
 
 .bg_40
   background-image: url("../assets/curso/tema2/img21.svg")
   background-repeat: no-repeat
 
-
 .bg_41
   background-image: url("../assets/curso/tema3/img11.svg")
   background-repeat: no-repeat
-  height: 455px
   border-radius: 10px
-  @media (max-width: $bp-max-md)
-    background-size: cover
+  background-size: cover
+  height: 100%
 
 .bg_42
   position: relative
@@ -819,7 +896,7 @@
   .tarjeta--azul 
     background-color: #F3F1FF
     border-radius: 10px
-    height: 110px
+    height: 120px
 
 .m_tarslyder3
   .tarjeta--azul 
@@ -895,6 +972,10 @@
   background-image: url("../assets/curso/tema3/img37.svg")
   background-repeat: no-repeat
   @media (max-width: $bp-max-md)
+    background-image: none
+    background-color: #D5CEF8
+    background-size: cover
+  @media (min-width: 990px) and (max-width: 1024px)
     background-size: cover
 
 .bg_48
