se realizan ajustes de instruccional

--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -41,7 +41,7 @@
 
 .img-t
   width: auto
-  height: auto 
+  height: auto
 
 .bg_01
   position: relative
@@ -58,7 +58,7 @@
     background-image: url("../assets/curso/tema1/img01.svg")
     background-repeat: no-repeat
     background-size: cover
-    
+
 
 .color1
   background-color: #E4E4E4
@@ -68,7 +68,7 @@
 
 .bg_02
   background-image: url("../assets/curso/tema1/img04.svg")
-  background-repeat: no-repeat 
+  background-repeat: no-repeat
   height: 196px
   border-radius: 0px
   @media (max-width: $bp-max-xs)
@@ -88,12 +88,12 @@
   height: 100%
   justify-content: center
 
-.slyder-f__btn 
+.slyder-f__btn
   i
     font-size: 1.5rem
     background-color: #636363
     width: 50px
-    height: 50px 
+    height: 50px
     border-radius: 50%
     padding: 14px 17px
     color: white
@@ -102,7 +102,7 @@
       height: 35px
       padding: 9px 13px
       font-size: 1rem
-  
+
 .bg_03
   background-image: url("../assets/curso/tema1/img11.svg")
   background-repeat: no-repeat
@@ -149,7 +149,7 @@
 .horizontal-scroll
   align-items: stretch !important
 
-.bg_06  
+.bg_06
   background-image: url("../assets/curso/tema1/img20.svg")
   background-repeat: no-repeat
   background-size: cover
@@ -167,7 +167,7 @@
   //     background-size: cover
   // @media (min-width: 990px) and (max-width: 1024px)
   //   width: 103%
-  
+
 .bg_07
   position: relative
   h3
@@ -211,11 +211,11 @@
     background-image: url("../assets/curso/tema1/img32.svg")
     background-repeat: no-repeat
 
-.tarjeta--azul 
+.tarjeta--azul
     background-color: #F6F6F6
     border-radius: 24px
 
-.tarjeta--azul.acordion__activo 
+.tarjeta--azul.acordion__activo
     background-color: #DAF1F5
 
 .bg_12
@@ -341,21 +341,21 @@
     background-image: url("../assets/curso/tema1/img43.svg")
     background-repeat: no-repeat
 
-.tarjeta.color-primario 
+.tarjeta.color-primario
     background-image: url("../assets/curso/tema1/img47.svg")
-    background-repeat: no-repeat    
+    background-repeat: no-repeat
     background-size: cover
     background-position: center center
-    border-radius: 10px    
+    border-radius: 10px
     background-color: white
 
 .m_tar-avatar2
   .tarjeta.color-primario
     width: 100%
     background-image: url("../assets/curso/tema3/img23.svg")
-    background-repeat: no-repeatd 
+    background-repeat: no-repeatd
     background-size: cover
-    background-position: center center  
+    background-position: center center
 
 .img85
   max-width: 85px
@@ -365,10 +365,10 @@
   width: 91px
   margin-left: -22%
 
-.tarjeta-avatar > img 
+.tarjeta-avatar > img
     top: 39px
-    
-.tarjeta.color-secundario 
+
+.tarjeta.color-secundario
     background-image: url("../assets/curso/tema2/img15.svg")
     background-repeat: no-repeat
     width: 295px
@@ -377,17 +377,17 @@
 
 .tarjeta.color-acento-contenido
     background-image: url("../assets/curso/tema2/img15.svg")
-    background-repeat: no-repeat    
+    background-repeat: no-repeat
     background-size: cover
     background-position: center center
-    border-radius: 10px     
+    border-radius: 10px
 
 .m_tarjeta-b
   .tarjeta--boton.color-acento-contenido
     height: 100%
 .hover2
     .tarjeta--boton:hover
-      background-color: #2FF980  
+      background-color: #2FF980
 
 .bg_17
   background-image: url("../assets/curso/tema1/img48.svg")
@@ -433,11 +433,11 @@
 
 .bg_19
   background-image: url("../assets/curso/tema1/img56.svg")
-  background-repeat: no-repeat 
+  background-repeat: no-repeat
 
 .bg_20
   background-image: url("../assets/curso/tema1/img63.svg")
-  background-repeat: no-repeat 
+  background-repeat: no-repeat
 
 .bg_21
   background-image: url("../assets/curso/tema1/img65.svg")
@@ -537,7 +537,7 @@
       width: 105%
       height: 107%
 
-.lista-ul--color li > i:first-of-type 
+.lista-ul--color li > i:first-of-type
     color: #40327B
 
 .border_b1
@@ -595,13 +595,13 @@
   @media (min-width: $bp-min-lg) and (max-width: $bp-max-xl)
     left: 0px
 
-.bg_34  
+.bg_34
   min-height: 250px
   background-image: url("../assets/curso/tema1/img11-1.svg")
   background-repeat: no-repeat
   background-size: cover
   background-position: right center
-  @media (max-width: 990px) 
+  @media (max-width: 990px)
     background-position: center center
 
   // height: 252px
@@ -653,7 +653,7 @@
     height: 100%
     width: 100%
 
-.tarjeta--boton 
+.tarjeta--boton
     border-radius: 10px
     background-color: #D5CEF8
     //height: 314px
@@ -674,7 +674,7 @@
     background-repeat: no-repeat
     @media (max-width: $bp-max-xs)
       background-image: url("../assets/curso/tema3/img49.svg")
-      
+
 .bg_36
   background-image: url("../assets/curso/tema1/img87.svg")
   background-repeat: no-repeat
@@ -689,7 +689,7 @@
     background-image: none
     background-color: #D5CEF8
     background-size: cover
-  
+
 .bg_38
   position: relative
   .row
@@ -723,14 +723,14 @@
     height: 100%
     background-image: url("../assets/curso/tema2/img13.svg")
     background-repeat: no-repeat
-      
+
 .bg_color1
   background-color: #F3F1FF
 
-.pasos-a.color-acento-contenido .pasos-a__circle div 
+.pasos-a.color-acento-contenido .pasos-a__circle div
     color: #fff
 
-.pasos-a__linea__esquina__linea 
+.pasos-a__linea__esquina__linea
     border-radius: 0px
 
 .color_i-1
@@ -739,13 +739,13 @@
 
 .tarjeta--boton.color-acento-botones
   background-image: url("../assets/curso/tema3/img08.svg")
-  background-repeat: no-repeat  
+  background-repeat: no-repeat
   background-size: cover
   background-position: bottom center
 
 .hover1
   .tarjeta--boton:hover
-    background-image: url("../assets/curso/tema3/img09.svg")    
+    background-image: url("../assets/curso/tema3/img09.svg")
 
 .tarjeta--boton.color-primario
   background-color: #583AE2
@@ -829,13 +829,13 @@
       background-image: url("../assets/curso/tema3/img48.svg")
 
 .m_tarslyder2
-  .tarjeta--azul 
+  .tarjeta--azul
     background-color: #F3F1FF
     border-radius: 10px
     height: 120px
 
 .m_tarslyder3
-  .tarjeta--azul 
+  .tarjeta--azul
     background-color: #B5E4EB
     border-radius: 10px
     height: 119px
@@ -929,7 +929,7 @@
     background-image: url("../assets/curso/tema3/img39.svg")
     background-repeat: no-repeat
     @media (max-width: $bp-max-xs)
-      background-image: url("../assets/curso/tema3/img48.svg")    
+      background-image: url("../assets/curso/tema3/img48.svg")
 
 .bg_49
   position: relative
@@ -964,3 +964,13 @@
     background-repeat: no-repeat
     @media (max-width: $bp-max-xs)
       background-image: url("../assets/curso/tema3/img49.svg")
+
+
+
+.fa-ul2
+  li
+    display: flex !important
+    &::before
+      position: relative
+      margin-right: 7px
+      font-size: 1.4rem
