--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -1000,3 +1000,10 @@
     height: 38px
     bottom: 0px
     left: 0px
+
+
+.banner-principal
+  .container.tarjeta
+    @media screen and (max-width: $bp-max-xs)
+      background-image: none !important
+      background: #583AE2
