se realizan ajustes sugeridos  por repositorio, pendiente pdf

--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -1007,3 +1007,7 @@
     @media screen and (max-width: $bp-max-xs)
       background-image: none !important
       background: #583AE2
+
+
+td
+  word-wrap: break-word;
